--- a/src/components/interface/carousel2/carousel2.css
+++ b/src/components/interface/carousel2/carousel2.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
 }
 .carousel{
-    padding: 0% 5rem;
+    padding: 0% 2rem;
     background-color: white;
     color: #fff;
-    height: 20vh;
+    height: 30vh;
     width: 60%;
     display: block;
     margin-top: 5px;
@@ -22,7 +22,7 @@
     
 }
 .slick-slide div{
-    margin: 0 1rem;
+    margin: 0 2rem;
 
 }
 .slick-dots li.slick-active button:before{
@@ -36,7 +36,7 @@
     
 }
 .box img{
-    width: 100%;
+    width: 80%;
     height: 150px;
     pointer-events: none;
 }
@@ -45,4 +45,5 @@
     letter-spacing: 3px;
     color: #EA3B2E;
     font-size: medium;
+    margin-bottom: 30px;
 }
