--- a/src/components/interface/service/service.css
+++ b/src/components/interface/service/service.css
@@ -14,12 +14,14 @@ li{
     vertical-align: baseline;
 }
 .container {
+    border-radius: 0;
     position: relative;
     width: 100%;
     height: 100vh; /* Ajustez la hauteur en fonction de vos besoins */
     background-size: cover;
     background-position: center;
     margin-bottom: 20px;
+    margin-top: 0;
   }
   
   .overlay {
@@ -100,4 +102,7 @@ a{
 #but a{
     color: white;
     font-size: 14px;
+}
+#but:hover{
+    background-color: #EA3B2E;
 }
