--- a/src/components/interface/home/home.css
+++ b/src/components/interface/home/home.css
@@ -1,30 +1,32 @@
-
-*{
-    font-family:'rubik', Sans-serif;
+.containerfirst{
+    border-radius: 0;
+  position: relative;
+  width: 100%;
+  height: 100vh; 
+  background-image: url("../../../assets/group.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 20px;
 }
-/*.home{
-    align-items: center;
-    min-height: 100vh;
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-    background-image: url("../../../assets/group.jpg");
-}*/
-/*.overlay{
+.image-overlay {
     position: absolute;
-    
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}*/
-.text{
-    width: 55%;
-    padding: 50px 50px;
-    position: relative;
-    top: 0;
-    right: 15%;
-}
-.text h1{
+    background-color:rgba(0, 0, 0, 0.5);
+    transition: background 0.3s,border-radius 0.2rem, opacity 0.3s;
+  
+  }
+  .text {
+    position: absolute;
+    text-align: left;
+    margin-top: 10%;
+    margin-left: 10%;
+    width: 40%;
+    
+  }
+  .text h1{
     font-size: 4.5rem;
     color: white;
     font-weight:600;
@@ -32,7 +34,7 @@
     margin-bottom: 1.2rem;
     
 }
-#rg{
+  #rg{
     letter-spacing: 0.2em;
     color: #EA3B2E;
     font-weight: 600;
@@ -41,11 +43,11 @@
 }
 #blc{
     color: white;
-    font-size: 20px;
+    font-size:15px;
     margin-bottom: 40px;
 }
 .btn{
-    padding: 10px 20px;
+    padding: 1em;
     background: #EA3B2E;
     color: white;
     font-size: 14px;
@@ -53,36 +55,5 @@
     border: 0.5px solid aqua;
     border-radius: 5px;
     width: 5%;
-    height: 10%;
+    height: 25%;
 }
-.image-container {
-    position: relative;
-    display: inline-block;
-    min-height: 100vh;
-    width: 100%;
-    background-size: cover;
-    
-  }
-  #img{
-    max-height: 100vh;
-    width: 100%;
-    background-size: cover;
-    
-    
-  }
- .image-overlay {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 607px;
-    background-color: rgba(0, 0, 0, 0.8); 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  /*.overlay-text {
-    color: white; 
-    font-size: 24px; 
-    font-weight: bold;
-  }*/
