--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -5,7 +5,7 @@
     background-color: #13152a;
 }
 
-.container {
+.container_login {
     background-color: white;
     position: relative;
     margin-top: 100px;
