--- a/src/components/interface/navbar/navbar.css
+++ b/src/components/interface/navbar/navbar.css
@@ -39,11 +39,14 @@
     flex-direction: row;
 }
 
-.navbar-login {
+.navbar-login,
+.navbar-login span {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     font-weight: 700;
+    color: #13296d;
+
 }
 .navbar-links_container ul li a{
 font-weight: 700;
@@ -52,5 +55,6 @@ padding: 10px 25px;}
 .navbar-links_container ul li a:hover{
     color: rgb(27, 201, 201);
 }
+
  
 
