--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -2,7 +2,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
-    background-color: #13152a;
+    background-color: #0D1E4C;
 }
 
 .container_login {
@@ -29,7 +29,7 @@
     padding: 0px 130px;
     font-size: 35px;
     font-weight: bold;
-    color: rgb(222, 84, 84);
+    color: #EE4437;
   }
   .login_form{
     padding: 20px 40px;
@@ -53,7 +53,7 @@
     outline: none;
     cursor: pointer;
     font-weight: bold;
-    background:#1A237E ;
+    background:#0D1E4C ;
     border-radius: 3px;
     border: 1px solid #3949AB;
     transition: -5s;
