--- a/src/components/interface/Services/Services.css
+++ b/src/components/interface/Services/Services.css
@@ -29,7 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    margin-bottom: 0;
 }
 .textser{
     position: absolute;
